# mtl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  insensitive.cpp  memory.cpp  outptr.cpp  split.cpp
include/mtl/: memory.hpp  string.hpp  type_traits.hpp
include/mtl/details/: istring.hpp  istring_compare.hpp  string_insensitive.hpp  string_replace.hpp  string_split.hpp
tests/: CMakeLists.txt
tests/src/: memory_out_ptr.cpp  string_icompare.cpp  string_ifind.cpp  string_replace.cpp  string_split.cpp
